k8s/libretranslate/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: libretranslate-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: libretranslate
