k8s/libretranslate/templates/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: libretranslate
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`translate.kevingomez.fr`)
      middlewares:
        - name: forwardauth-authelia
          namespace: authelia
      services:
        - kind: Service
          name: libretranslate-web
          port: http
  tls:
    secretName: libretranslate-cert
